// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`镜像测试 基本渲染 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::-moz-focus-inner {
  border-style: none;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c1 {
  font-size: 16px;
  opacity: 0.7;
}

@media (hover:none) {
  .c0:hover {
    background-color: transparent;
  }
}

<button
  className="c0 sinoui-base-button c1"
  role="button"
  type="button"
>
  123
</button>
`;

exports[`镜像测试 指定文字大小 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::-moz-focus-inner {
  border-style: none;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c1 {
  font-size: 36px;
  opacity: 0.7;
}

@media (hover:none) {
  .c0:hover {
    background-color: transparent;
  }
}

<button
  className="c0 sinoui-base-button c1"
  fontSize={36}
  role="button"
  type="button"
>
  123
</button>
`;

exports[`镜像测试 选中状态 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::-moz-focus-inner {
  border-style: none;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c1 {
  font-size: 16px;
  opacity: 1;
}

@media (hover:none) {
  .c0:hover {
    background-color: transparent;
  }
}

<button
  className="c0 sinoui-base-button c1"
  role="button"
  selected={true}
  type="button"
>
  123
</button>
`;
